[tool.poetry]
name = "niekdewin.nl"
version = "0.1.0"
description = ""
authors = ["niek <mail@niekdewin.nl>"]

[tool.poetry.dependencies]
python = "^3.6"
markdown2 = "^2.3.9"
jupyter = "^1.0.0"
ipykernel = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
